<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/global_bg"
        tools:context=".ui.main.account.BillingAddressFragment">

    <TextView
            android:id="@+id/txtBillingAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/account_note_bg"
            android:paddingLeft="@dimen/_12sdp"
            android:text="@string/str_billing_address"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18ssp"
            android:fontFamily="@font/avenir_medium"
            app:layout_constraintTop_toTopOf="parent"
    />

    <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/str_first_name"
            android:inputType="textPersonName"
            style="@style/AddressInputEditTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/txtBillingAddress"
            app:layout_constraintBottom_toTopOf="@+id/edtLastName"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:layout_constraintVertical_chainStyle="spread_inside"
    />
    <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/str_last_name"
            android:inputType="textPersonName"
            style="@style/AddressInputEditTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/edtFirstName"
            app:layout_constraintBottom_toTopOf="@+id/edtPhone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
    />
    <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/str_phone"
            android:inputType="phone"
            style="@style/AddressInputEditTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/edtLastName"
            app:layout_constraintBottom_toTopOf="@+id/txtCountry"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
    />

    <TextView
            android:id="@+id/txtCountry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/str_country_region"
            style="@style/AddressInputEditTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/edtPhone"
            app:layout_constraintBottom_toTopOf="@+id/edtPostcode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"

    />

    <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:src="@drawable/arrow_right"
            app:layout_constraintTop_toTopOf="@+id/txtCountry"
            app:layout_constraintBottom_toBottomOf="@+id/txtCountry"
            app:layout_constraintRight_toRightOf="@+id/txtCountry"
            android:layout_marginEnd="@dimen/_4sdp"
    />


    <EditText
            android:id="@+id/edtPostcode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/str_postal_code"
            style="@style/AddressInputEditTextStyle"
            android:inputType="textNoSuggestions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCountry"
            app:layout_constraintBottom_toTopOf="@+id/edtStreet"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
    />
    <EditText
            android:id="@+id/edtStreet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/str_street_address"
            style="@style/AddressInputEditTextStyle"
            android:inputType="textNoSuggestions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPostcode"
            app:layout_constraintBottom_toTopOf="@+id/edtCity"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
    />

    <EditText
            android:id="@+id/edtCity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/str_town_city"
            style="@style/AddressInputEditTextStyle"
            android:inputType="textNoSuggestions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtStreet"
            app:layout_constraintBottom_toTopOf="@+id/edtCounty"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
    />

    <EditText
            android:id="@+id/edtCounty"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/str_county"
            style="@style/AddressInputEditTextStyle"
            android:inputType="textNoSuggestions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtCity"
            android:layout_marginBottom="@dimen/_24sdp"
            app:layout_constraintBottom_toTopOf="@+id/btnSaveAddress"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
    />


    <Button
            android:id="@+id/btnSaveAddress"
            android:layout_width="0dp"
            android:layout_height="@dimen/_32sdp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/avenir_heavy"
            android:text="@string/str_save_address"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@+id/txtCountry"
            app:layout_constraintLeft_toLeftOf="@+id/txtCountry"
            android:layout_marginBottom="@dimen/_20sdp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>